# SnakeGame

./: CMakeLists.txt  main.cpp
assets/Levels/: level1.txt  level2.txt  levels.txt
headers/: Wall.h  apple.h  engine.h  snakesection.h
src/: Wall.cpp  apple.cpp  draw.cpp  engine.cpp  input.cpp  snakesection.cpp  update.cpp
